# ai_detector

./: .coverage  .gitignore  README.md  detector.ipynb  detector_app.py  example_usage.py  pyproject.toml  pyproject_poetry.toml
.ipynb_checkpoints/: detector-checkpoint.ipynb
src/: __init__.py  detector.py  detector_app.py
src/ai_detector/: __init__.py  detector.py  detector_app.py  metrics.py  model_configs.py
tests/: conftest.py  test_detector.py  test_detector_app.py  test_prediction.py
